<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <include
        android:id="@+id/topBar"
        layout="@layout/layout_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBelajar1"
        style="@style/TitleYellowBubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/kuis_suku_kata_line1"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar" />

    <TextView
        android:id="@+id/tvBelajar2"
        style="@style/TitleYellowBubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_suku_kata"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBelajar1" />

    <ImageView
        android:id="@+id/ivIllustration"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBelajar2"
        tools:src="@drawable/ic_mascot_girl" />

    <TextView
        android:id="@+id/tvSyllable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/card_pink"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivIllustration"
        tools:text="BA - BI" />

    <ImageButton
        android:id="@+id/btnMic"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_mic_button"
        android:contentDescription="@string/content_desc_mic"
        android:padding="14dp"
        android:src="@drawable/ic_mic"
        app:layout_constraintBottom_toTopOf="@id/navRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navRow"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/btnPrev"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_desc_back"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_desc_next"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
