<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:background="@drawable/bg_nav_icon"
        android:contentDescription="@string/settings_title"
        android:padding="8dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnNav"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/bg_nav_icon"
        android:contentDescription="@string/content_desc_back"
        android:padding="8dp"
        android:src="@drawable/ic_home"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/btnSettings"
        app:layout_constraintTop_toTopOf="@id/btnSettings" />

    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/greeting_hi"
        android:textColor="@color/text_pink"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
        app:layout_constraintEnd_toStartOf="@id/ivAvatar"
        app:layout_constraintTop_toTopOf="@id/ivAvatar" />

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_avatar_circle"
        android:contentDescription="@null"
        android:padding="8dp"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
