<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_background">

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_nav_icon"
        android:contentDescription="@string/settings_title"
        android:padding="8dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivMascot"
        android:layout_width="720dp"
        android:layout_height="720dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@null"
        android:scaleType="centerInside"
        android:src="@drawable/tulisantrilinggo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="-480dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/maskot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivMascot" />

    <Button
        android:id="@+id/btnSignIn"
        style="@style/PillButton"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_sign_in"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/PillButton"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:layout_marginBottom="56dp"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
