<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_background">
    <include
        android:id="@+id/topBar"
        layout="@layout/layout_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/AyoBelajar"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/ayo_belajar_huruf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/letterContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/btnMic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AyoBelajar">

        <TextView
            android:id="@+id/tvLetterUpper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="A"
            android:textColor="@color/card_pink"
            android:textSize="150sp"
            android:textStyle="bold"
            android:shadowColor="#40000000"
            android:shadowDx="15"
            android:shadowDy="15"
            android:shadowRadius="2"
            app:strokeColor="@color/primary_purple" />

        <TextView
            android:id="@+id/tvLetterLower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="-20dp"
            android:fontFamily="sans-serif-black"
            android:gravity="bottom"
            android:text="a"
            android:textColor="@color/card_pink"
            android:textSize="100sp"
            android:textStyle="bold"
            android:shadowColor="#40000000"
            android:shadowDx="15"
            android:shadowDy="15"
            android:shadowRadius="2" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnMic"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_mic_button"
        android:contentDescription="@string/content_desc_mic"
        android:padding="14dp"
        android:src="@drawable/ic_mic"
        app:layout_constraintBottom_toTopOf="@id/navRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navRow"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/btnPrev"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_desc_back"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_desc_next"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
